--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html oncontextmenu="return false">
     <head>
         <title>❤️</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -8,7 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="assets/js/index.js"></script>
     </head>
-    <body oncontextmenu="return false">
+    <body>
         <div class="player">
 
         </div>
